Sauvegarde de mes modules (Rendez-vous, API, Parapharmacie) avant intégration